<?xml version="1.0"?>
<package format="2">
  <name>ovc3</name>
  <version>0.0.0</version>
  <description>ovc3_github</description>

  <maintainer email="katherinekee@openrobotics.org">Katherine</maintainer>

  <!-- Rest of core ROS components uses this -->
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="theleafgecko@gmail.com">LeafGecko</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
